feat: complete landing page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,126 @@
     <title>Odin Landing Page</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <div class="wrapper">
+        <h1>Landing Page</h1>
+
+        <nav>
+          <ul>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#info">Information</a></li>
+            <li><a href="#quote">Quote</a></li>
+            <li><a href="#subs">Subscribe</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <section id="hero">
+        <div class="wrapper">
+          <div class="hero_article">
+            <div>
+              <h2>This website is awesome</h2>
+              <p>This website has some subtext thah goes gere under the main title. It's a smaller font and the color is lower contrast.</p>
+
+              <button class="btn">Sign Up</button>
+            </div>
+
+            <div class="img-container">
+              <img
+                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.wallpaperup.com%2Fuploads%2Fwallpapers%2F2013%2F06%2F28%2F110394%2F77ff2e0d69083a5d543907c990b94766.jpg&f=1&nofb=1&ipt=5d476fd6c935954719515e8081c881c9a5fd370e2aa924e69d3e6cb887931a90&ipo=images"
+                alt="cat on the green grass"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="info">
+        <div class="wrapper">
+          <h3>Some random information</h3>
+
+          <ul>
+            <li>
+              <div class="info_card">
+                <img
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ff4%2F2d%2F3f%2Ff42d3febd8e7634ca3bb9131afaccc73.jpg&f=1&nofb=1&ipt=e9a0c355cd9896f8b5cc11990d248e3937fc0ee1dcd41403efd42f634ece25d9&ipo=images"
+                  alt="cute cat"
+                >
+                <p>This is some subtext under an illustration or image</p>
+              </div>
+            </li>
+            <li>
+              <div class="info_card">
+                <img
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ff4%2F2d%2F3f%2Ff42d3febd8e7634ca3bb9131afaccc73.jpg&f=1&nofb=1&ipt=e9a0c355cd9896f8b5cc11990d248e3937fc0ee1dcd41403efd42f634ece25d9&ipo=images"
+                  alt="cute cat"
+                >
+                <p>This is some subtext under an illustration or image</p>
+              </div>
+            </li>
+            <li>
+              <div class="info_card">
+                <img
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ff4%2F2d%2F3f%2Ff42d3febd8e7634ca3bb9131afaccc73.jpg&f=1&nofb=1&ipt=e9a0c355cd9896f8b5cc11990d248e3937fc0ee1dcd41403efd42f634ece25d9&ipo=images"
+                  alt="cute cat"
+                >
+                <p>This is some subtext under an illustration or image</p>
+              </div>
+            </li>
+            <li>
+              <div class="info_card">
+                <img
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ff4%2F2d%2F3f%2Ff42d3febd8e7634ca3bb9131afaccc73.jpg&f=1&nofb=1&ipt=e9a0c355cd9896f8b5cc11990d248e3937fc0ee1dcd41403efd42f634ece25d9&ipo=images"
+                  alt="cute cat"
+                >
+                <p>This is some subtext under an illustration or image</p>
+              </div>
+            </li>
+            <li>
+              <div class="info_card">
+                <img
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ff4%2F2d%2F3f%2Ff42d3febd8e7634ca3bb9131afaccc73.jpg&f=1&nofb=1&ipt=e9a0c355cd9896f8b5cc11990d248e3937fc0ee1dcd41403efd42f634ece25d9&ipo=images"
+                  alt="cute cat"
+                >
+                <p>This is some subtext under an illustration or image</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="quote">
+        <div class="wrapper">
+          <figure>
+            <blockquote>
+              This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </blockquote>
+            <figcaption>-Thor, God of Thunder</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <section id="subs">
+        <div class="wrapper">
+          <div class="subs_card">
+            <div>
+              <h3>Call to action! It's time!</h3>
+              <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <button class="btn">Sign Up</button>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="wrapper">
+        <p>Copyright © The Odin Project 2021</p>
+      </div>
+    </footer>
+  </body>
 </html>
